--- a/mall-statistics-adapter/mall-statistics-adapter-out/mall-statistics-adapter-out-persistence/pom.xml
+++ b/mall-statistics-adapter/mall-statistics-adapter-out/mall-statistics-adapter-out-persistence/pom.xml
@@ -32,5 +32,10 @@
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
