--- a/mall-statistics-domain/pom.xml
+++ b/mall-statistics-domain/pom.xml
@@ -25,10 +25,23 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Spring Boot 对 JPA 的 starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
         <!-- MyBatis Plus 注解 -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-annotation</artifactId>
+        </dependency>
+
+        <!-- Database Driver (MySQL) -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
